# serializer version: 1
# name: TestBlastRadius.test_user_blast_radius
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT persons.id) AS `count(DISTINCT persons.id)`
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'group'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___group,
            argMax(person.team_id, person.version) AS team_id,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.team_id, 99999), in(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'group'), ''), 'null'), '^"|"$', ''), tuple('0', '1', '2', '3'))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE and(equals(persons.team_id, 99999), in(persons.properties___group, tuple('0', '1', '2', '3')))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 99999
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_group_key_property
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT groups.key) AS `count(DISTINCT groups.key)`
  FROM
    (SELECT argMax(groups.team_id, toTimeZone(groups._timestamp, 'UTC')) AS team_id,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.index, 0), equals(groups.key, 'special-workspace'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_group_key_property.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 99999
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_group_key_property.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT groups.key) AS `count(DISTINCT groups.key)`
  FROM
    (SELECT argMax(groups.team_id, toTimeZone(groups._timestamp, 'UTC')) AS team_id,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.index, 0), ilike(groups.key, '%org:%'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT groups.key) AS `count(DISTINCT groups.key)`
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'industry'), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, 'UTC')), 1) AS properties___industry,
            argMax(groups.team_id, toTimeZone(groups._timestamp, 'UTC')) AS team_id,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.index, 0), in(groups.properties___industry, tuple('0', '1', '2', '3')))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 99999
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT groups.key) AS `count(DISTINCT groups.key)`
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'industry'), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, 'UTC')), 1) AS properties___industry,
            argMax(groups.team_id, toTimeZone(groups._timestamp, 'UTC')) AS team_id,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.index, 0), and(in(groups.properties___industry, tuple('0', '1', '2', '3', '4')), in(groups.properties___industry, tuple('2', '3', '4', '5', '6'))))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 99999
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 99999
    AND cohort_id = 99999
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.1
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 99999
    AND cohort_id = 99999
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT persons.id) AS `count(DISTINCT persons.id)`
  FROM
    (SELECT argMax(person.team_id, person.version) AS team_id,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.team_id, 99999), in(where_optimization.id,
                                                                                                                                                         (SELECT cohortpeople.person_id AS person_id
                                                                                                                                                          FROM cohortpeople
                                                                                                                                                          WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0)))), in(where_optimization.id,
                                                                                                                                                                                                                                                                                         (SELECT cohortpeople.person_id AS person_id
                                                                                                                                                                                                                                                                                          FROM cohortpeople
                                                                                                                                                                                                                                                                                          WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0))))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE and(equals(persons.team_id, 99999), and(in(persons.id,
                                                     (SELECT cohortpeople.person_id AS person_id
                                                      FROM cohortpeople
                                                      WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0)))), in(persons.id,
                                                                                                                                                                                     (SELECT cohortpeople.person_id AS person_id
                                                                                                                                                                                      FROM cohortpeople
                                                                                                                                                                                      WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0))))))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.3
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 99999
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts
  '''
  SELECT person_id
  FROM person_static_cohort
  WHERE team_id = 99999
    AND cohort_id = 99999
    AND person_id IN ['00000000-0000-4000-8000-000000000000', '00000000-0000-4000-8000-000000000001', '00000000-0000-4000-8000-000000000002']
  GROUP BY person_id
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT persons.id) AS `count(DISTINCT persons.id)`
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'group'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___group,
            argMax(person.team_id, person.version) AS team_id,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.team_id, 99999), in(where_optimization.id,
                                                                                                                                                         (SELECT person_static_cohort.person_id AS person_id
                                                                                                                                                          FROM person_static_cohort
                                                                                                                                                          WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, 99999)))), in(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'group'), ''), 'null'), '^"|"$', ''), tuple('1', '2', '4', '5', '6'))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE and(equals(persons.team_id, 99999), and(in(persons.id,
                                                     (SELECT person_static_cohort.person_id AS person_id
                                                      FROM person_static_cohort
                                                      WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, 99999)))), in(persons.properties___group, tuple('1', '2', '4', '5', '6'))))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 99999
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.3
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 99999
    AND cohort_id = 99999
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT persons.id) AS `count(DISTINCT persons.id)`
  FROM
    (SELECT argMax(person.team_id, person.version) AS team_id,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.team_id, 99999), in(where_optimization.id,
                                                                                                                                                         (SELECT person_static_cohort.person_id AS person_id
                                                                                                                                                          FROM person_static_cohort
                                                                                                                                                          WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, 99999)))), in(where_optimization.id,
                                                                                                                                                                                                                                                                        (SELECT cohortpeople.person_id AS person_id
                                                                                                                                                                                                                                                                         FROM cohortpeople
                                                                                                                                                                                                                                                                         WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0))))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE and(equals(persons.team_id, 99999), and(in(persons.id,
                                                     (SELECT person_static_cohort.person_id AS person_id
                                                      FROM person_static_cohort
                                                      WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, 99999)))), in(persons.id,
                                                                                                                                                                    (SELECT cohortpeople.person_id AS person_id
                                                                                                                                                                     FROM cohortpeople
                                                                                                                                                                     WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0))))))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT persons.id) AS `count(DISTINCT persons.id)`
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'group'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___group,
            argMax(person.team_id, person.version) AS team_id,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.team_id, 99999), or(ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'group'), ''), 'null'), '^"|"$', ''), 'none'), 0), in(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'group'), ''), 'null'), '^"|"$', ''), tuple('1', '2', '3')))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE and(equals(persons.team_id, 99999), or(ifNull(equals(persons.properties___group, 'none'), 0), in(persons.properties___group, tuple('1', '2', '3'))))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 99999
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.2
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 99999
    AND cohort_id = 99999
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.3
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT persons.id) AS `count(DISTINCT persons.id)`
  FROM
    (SELECT argMax(person.team_id, person.version) AS team_id,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.team_id, 99999), in(where_optimization.id,
                                                                                                                                                         (SELECT cohortpeople.person_id AS person_id
                                                                                                                                                          FROM cohortpeople
                                                                                                                                                          WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0))))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE and(equals(persons.team_id, 99999), in(persons.id,
                                                 (SELECT cohortpeople.person_id AS person_id
                                                  FROM cohortpeople
                                                  WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0)))))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.1
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.10
  '''
  SELECT "insights_featureflagevaluationcontext"."id",
         "insights_featureflagevaluationcontext"."feature_flag_id",
         "insights_featureflagevaluationcontext"."evaluation_context_id",
         "insights_featureflagevaluationcontext"."created_at",
         "insights_evaluationcontext"."id",
         "insights_evaluationcontext"."name",
         "insights_evaluationcontext"."team_id",
         "insights_evaluationcontext"."created_at",
         "insights_evaluationcontext"."hidden_from_suggestions"
  FROM "insights_featureflagevaluationcontext"
  INNER JOIN "insights_evaluationcontext" ON ("insights_featureflagevaluationcontext"."evaluation_context_id" = "insights_evaluationcontext"."id")
  WHERE "insights_featureflagevaluationcontext"."feature_flag_id" IN (1,
                                                                     2,
                                                                     3,
                                                                     4,
                                                                     5 /* ... */)
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.11
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id",
         "insights_taggeditem"."ticket_id",
         "insights_taggeditem"."account_id",
         "insights_taggeditem"."endpoint_id",
         "insights_tag"."id",
         "insights_tag"."name",
         "insights_tag"."team_id"
  FROM "insights_taggeditem"
  INNER JOIN "insights_tag" ON ("insights_taggeditem"."tag_id" = "insights_tag"."id")
  WHERE "insights_taggeditem"."feature_flag_id" IN (1,
                                                   2,
                                                   3,
                                                   4,
                                                   5 /* ... */)
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.12
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.13
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'cohort'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.14
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'cohort'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.15
  '''
  SELECT "insights_filesystemshortcut"."id",
         "insights_filesystemshortcut"."team_id",
         "insights_filesystemshortcut"."user_id",
         "insights_filesystemshortcut"."path",
         "insights_filesystemshortcut"."type",
         "insights_filesystemshortcut"."ref",
         "insights_filesystemshortcut"."href",
         "insights_filesystemshortcut"."order",
         "insights_filesystemshortcut"."created_at",
         "insights_filesystemshortcut"."surface"
  FROM "insights_filesystemshortcut"
  WHERE (("insights_filesystemshortcut"."surface" IS NULL
          OR "insights_filesystemshortcut"."surface" = 'web')
         AND "insights_filesystemshortcut"."ref" = '0001'
         AND "insights_filesystemshortcut"."team_id" = 99999
         AND "insights_filesystemshortcut"."type" = 'cohort'
         AND NOT ("insights_filesystemshortcut"."path" = 'Users with feature flag some-feature enabled at 2021-01-01 00:00:00'
                  AND "insights_filesystemshortcut"."href" = '__skipped__'
                  AND "insights_filesystemshortcut"."href" IS NOT NULL))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.16
  '''
  SELECT "insights_team"."id",
         "insights_team"."project_id"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.17
  '''
  SELECT "insights_cohort"."id",
         "insights_cohort"."name",
         "insights_cohort"."description",
         "insights_cohort"."team_id",
         "insights_cohort"."deleted",
         "insights_cohort"."filters",
         "insights_cohort"."query",
         "insights_cohort"."version",
         "insights_cohort"."pending_version",
         "insights_cohort"."count",
         "insights_cohort"."created_by_id",
         "insights_cohort"."created_at",
         "insights_cohort"."is_calculating",
         "insights_cohort"."last_calculation",
         "insights_cohort"."last_calculation_duration_ms",
         "insights_cohort"."errors_calculating",
         "insights_cohort"."last_error_at",
         "insights_cohort"."last_backfill_person_properties_at",
         "insights_cohort"."last_backfill_events_at",
         "insights_cohort"."filters_shape_hash",
         "insights_cohort"."behavioral_filters_shape_hash",
         "insights_cohort"."person_filters_shape_hash",
         "insights_cohort"."last_realtime_cohort_calculation_at",
         "insights_cohort"."is_static",
         "insights_cohort"."kind",
         "insights_cohort"."cohort_type",
         "insights_cohort"."condition_type",
         "insights_cohort"."groups"
  FROM "insights_cohort"
  INNER JOIN "insights_team" ON ("insights_cohort"."team_id" = "insights_team"."id")
  WHERE ("insights_cohort"."id" = 99999
         AND "insights_team"."project_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.18
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."archived",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  INNER JOIN "insights_team" ON ("insights_featureflag"."team_id" = "insights_team"."id")
  WHERE (NOT ("insights_featureflag"."deleted")
         AND "insights_featureflag"."key" = 'some-feature'
         AND "insights_team"."project_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.19
  '''
  SELECT 1 AS "a"
  FROM "insights_cohort"
  INNER JOIN "insights_team" ON ("insights_cohort"."team_id" = "insights_team"."id")
  WHERE (("insights_cohort"."team_id" =
            (SELECT U0."parent_team_id" AS "parent_team_id"
             FROM "insights_team" U0
             WHERE U0."id" = 99999
             LIMIT 1)
          OR ("insights_team"."parent_team_id" IS NULL
              AND "insights_cohort"."team_id" = 99999))
         AND "insights_cohort"."id" = 99999)
  LIMIT 1
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.2
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_team"
  INNER JOIN "insights_organization" ON ("insights_team"."organization_id" = "insights_organization"."id")
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.20
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.21
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'cohort'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.22
  '''
  SELECT "insights_filesystemshortcut"."id",
         "insights_filesystemshortcut"."team_id",
         "insights_filesystemshortcut"."user_id",
         "insights_filesystemshortcut"."path",
         "insights_filesystemshortcut"."type",
         "insights_filesystemshortcut"."ref",
         "insights_filesystemshortcut"."href",
         "insights_filesystemshortcut"."order",
         "insights_filesystemshortcut"."created_at",
         "insights_filesystemshortcut"."surface"
  FROM "insights_filesystemshortcut"
  WHERE (("insights_filesystemshortcut"."surface" IS NULL
          OR "insights_filesystemshortcut"."surface" = 'web')
         AND "insights_filesystemshortcut"."ref" = '0001'
         AND "insights_filesystemshortcut"."team_id" = 99999
         AND "insights_filesystemshortcut"."type" = 'cohort'
         AND NOT ("insights_filesystemshortcut"."path" = 'Users with feature flag some-feature enabled at 2021-01-01 00:00:00'
                  AND "insights_filesystemshortcut"."href" = '__skipped__'
                  AND "insights_filesystemshortcut"."href" IS NOT NULL))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.23
  '''
  SELECT "insights_cohort"."id",
         "insights_cohort"."name",
         "insights_cohort"."description",
         "insights_cohort"."team_id",
         "insights_cohort"."deleted",
         "insights_cohort"."filters",
         "insights_cohort"."query",
         "insights_cohort"."version",
         "insights_cohort"."pending_version",
         "insights_cohort"."count",
         "insights_cohort"."created_by_id",
         "insights_cohort"."created_at",
         "insights_cohort"."is_calculating",
         "insights_cohort"."last_calculation",
         "insights_cohort"."last_calculation_duration_ms",
         "insights_cohort"."errors_calculating",
         "insights_cohort"."last_error_at",
         "insights_cohort"."last_backfill_person_properties_at",
         "insights_cohort"."last_backfill_events_at",
         "insights_cohort"."filters_shape_hash",
         "insights_cohort"."behavioral_filters_shape_hash",
         "insights_cohort"."person_filters_shape_hash",
         "insights_cohort"."last_realtime_cohort_calculation_at",
         "insights_cohort"."is_static",
         "insights_cohort"."kind",
         "insights_cohort"."cohort_type",
         "insights_cohort"."condition_type",
         "insights_cohort"."groups"
  FROM "insights_cohort"
  WHERE "insights_cohort"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.24
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.25
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.26
  '''
  SELECT "insights_cohortcalculationhistory"."id",
         "insights_cohortcalculationhistory"."team_id",
         "insights_cohortcalculationhistory"."cohort_id",
         "insights_cohortcalculationhistory"."filters",
         "insights_cohortcalculationhistory"."count",
         "insights_cohortcalculationhistory"."started_at",
         "insights_cohortcalculationhistory"."finished_at",
         "insights_cohortcalculationhistory"."queries",
         "insights_cohortcalculationhistory"."error",
         "insights_cohortcalculationhistory"."error_code"
  FROM "insights_cohortcalculationhistory"
  WHERE ("insights_cohortcalculationhistory"."cohort_id" = 99999
         AND NOT ("insights_cohortcalculationhistory"."error" IS NULL)
         AND NOT ("insights_cohortcalculationhistory"."error" = ''
                  AND "insights_cohortcalculationhistory"."error" IS NOT NULL))
  ORDER BY "insights_cohortcalculationhistory"."started_at" DESC
  LIMIT 1
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.27
  '''
  SELECT "insights_experiment"."id",
         "insights_experiment"."name",
         "insights_experiment"."description",
         "insights_experiment"."team_id",
         "insights_experiment"."filters",
         "insights_experiment"."parameters",
         "insights_experiment"."secondary_metrics",
         "insights_experiment"."created_by_id",
         "insights_experiment"."feature_flag_id",
         "insights_experiment"."exposure_cohort_id",
         "insights_experiment"."holdout_id",
         "insights_experiment"."start_date",
         "insights_experiment"."end_date",
         "insights_experiment"."created_at",
         "insights_experiment"."updated_at",
         "insights_experiment"."archived",
         "insights_experiment"."feature_flag_auto_archived",
         "insights_experiment"."deleted",
         "insights_experiment"."type",
         "insights_experiment"."variants",
         "insights_experiment"."exposure_criteria",
         "insights_experiment"."metrics",
         "insights_experiment"."metrics_secondary",
         "insights_experiment"."primary_metrics_ordered_uuids",
         "insights_experiment"."secondary_metrics_ordered_uuids",
         "insights_experiment"."stats_config",
         "insights_experiment"."scheduling_config",
         "insights_experiment"."running_time_calculation",
         "insights_experiment"."excluded_variants",
         "insights_experiment"."only_count_matured_users",
         "insights_experiment"."status",
         "insights_experiment"."conclusion",
         "insights_experiment"."conclusion_comment",
         "insights_experiment"."flag_cleanup_task_id",
         "insights_experiment"."repository"
  FROM "insights_experiment"
  WHERE "insights_experiment"."exposure_cohort_id" = 99999
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.28
  '''
  /* user_id:0 celery:insights.tasks.calculate_cohort.insert_cohort_from_feature_flag */
  SELECT person_id
  FROM person_static_cohort
  WHERE team_id = 99999
    AND cohort_id = 99999
    AND person_id IN ['00000000-0000-4000-8000-000000000000']
  GROUP BY person_id
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.29
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.id AS id
  FROM
    (SELECT argMax(toTimeZone(person.created_at, 'UTC'), person.version) AS created_at,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), in(where_optimization.id,
                                                                                                              (SELECT person_static_cohort.person_id AS person_id
                                                                                                               FROM person_static_cohort
                                                                                                               WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, 99999))))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE in(persons.id,
             (SELECT person_static_cohort.person_id AS person_id
              FROM person_static_cohort
              WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, 99999))))
  ORDER BY persons.created_at DESC,
           persons.id DESC
  LIMIT 101
  OFFSET 0 SETTINGS optimize_aggregation_in_order=1,
                    join_algorithm='auto',
                    readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.3
  '''
  SELECT "insights_project"."updated_at",
         "insights_project"."id",
         "insights_project"."organization_id",
         "insights_project"."name",
         "insights_project"."created_at",
         "insights_project"."product_description",
         "insights_project"."is_pending_deletion"
  FROM "insights_project"
  WHERE "insights_project"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.4
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE ("insights_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.5
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at",
         "insights_team"."organization_id" AS "_team_organization_id"
  FROM "ee_accesscontrol"
  INNER JOIN "insights_team" ON ("ee_accesscontrol"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "insights_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.6
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE "insights_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.7
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."archived",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at",
         EXISTS
    (SELECT 1 AS "a"
     FROM "insights_team" U0
     WHERE (U0."project_id" = ("insights_team"."project_id")
            AND ((U0."session_recording_linked_flag" -> 'id'))::integer = ("insights_featureflag"."id"))
     LIMIT 1) AS "is_used_in_replay_settings_annotation",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         T5."id",
         T5."password",
         T5."last_login",
         T5."first_name",
         T5."last_name",
         T5."is_staff",
         T5."date_joined",
         T5."uuid",
         T5."current_organization_id",
         T5."current_team_id",
         T5."email",
         T5."pending_email",
         T5."distinct_id",
         T5."is_email_verified",
         T5."credentials_reviewed_at",
         T5."requested_password_reset_at",
         T5."requested_2fa_reset_at",
         T5."has_seen_product_intro_for",
         T5."strapi_id",
         T5."is_active",
         T5."role_at_organization",
         T5."theme_mode",
         T5."partial_notification_settings",
         T5."anonymize_data",
         T5."allow_impersonation",
         T5."toolbar_mode",
         T5."mascot_config",
         T5."allow_sidebar_suggestions",
         T5."shortcut_position",
         T5."passkeys_enabled_for_2fa",
         T5."hide_mcp_hints",
         T5."ui_configuration",
         T5."onboarding_skipped_at",
         T5."onboarding_skipped_reason",
         T5."onboarding_skipped_organization_id",
         T5."onboarding_delegated_to_invite_id",
         T5."onboarding_delegated_to_organization_id",
         T5."onboarding_delegation_accepted_at",
         T5."events_column_config",
         T5."email_opt_in"
  FROM "insights_featureflag"
  INNER JOIN "insights_team" ON ("insights_featureflag"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_featureflag"."created_by_id" = "insights_user"."id")
  LEFT OUTER JOIN "insights_user" T5 ON ("insights_featureflag"."last_modified_by_id" = T5."id")
  WHERE ("insights_team"."project_id" = 99999
         AND "insights_featureflag"."id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.8
  '''
  SELECT "insights_experiment"."id",
         "insights_experiment"."name",
         "insights_experiment"."description",
         "insights_experiment"."team_id",
         "insights_experiment"."filters",
         "insights_experiment"."parameters",
         "insights_experiment"."secondary_metrics",
         "insights_experiment"."created_by_id",
         "insights_experiment"."feature_flag_id",
         "insights_experiment"."exposure_cohort_id",
         "insights_experiment"."holdout_id",
         "insights_experiment"."start_date",
         "insights_experiment"."end_date",
         "insights_experiment"."created_at",
         "insights_experiment"."updated_at",
         "insights_experiment"."archived",
         "insights_experiment"."feature_flag_auto_archived",
         "insights_experiment"."deleted",
         "insights_experiment"."type",
         "insights_experiment"."variants",
         "insights_experiment"."exposure_criteria",
         "insights_experiment"."metrics",
         "insights_experiment"."metrics_secondary",
         "insights_experiment"."primary_metrics_ordered_uuids",
         "insights_experiment"."secondary_metrics_ordered_uuids",
         "insights_experiment"."stats_config",
         "insights_experiment"."scheduling_config",
         "insights_experiment"."running_time_calculation",
         "insights_experiment"."excluded_variants",
         "insights_experiment"."only_count_matured_users",
         "insights_experiment"."status",
         "insights_experiment"."conclusion",
         "insights_experiment"."conclusion_comment",
         "insights_experiment"."flag_cleanup_task_id",
         "insights_experiment"."repository"
  FROM "insights_experiment"
  WHERE (NOT "insights_experiment"."deleted"
         AND "insights_experiment"."feature_flag_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.9
  '''
  SELECT "insights_earlyaccessfeature"."id",
         "insights_earlyaccessfeature"."team_id",
         "insights_earlyaccessfeature"."feature_flag_id",
         "insights_earlyaccessfeature"."created_by_id",
         "insights_earlyaccessfeature"."name",
         "insights_earlyaccessfeature"."description",
         "insights_earlyaccessfeature"."stage",
         "insights_earlyaccessfeature"."documentation_url",
         "insights_earlyaccessfeature"."payload",
         "insights_earlyaccessfeature"."created_at",
         "insights_earlyaccessfeature"."assigned_user_id",
         "insights_earlyaccessfeature"."assigned_role_id",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         "ee_role"."id",
         "ee_role"."name",
         "ee_role"."organization_id",
         "ee_role"."created_at",
         "ee_role"."created_by_id",
         "ee_role"."feature_flags_access_level"
  FROM "insights_earlyaccessfeature"
  LEFT OUTER JOIN "insights_user" ON ("insights_earlyaccessfeature"."assigned_user_id" = "insights_user"."id")
  LEFT OUTER JOIN "ee_role" ON ("insights_earlyaccessfeature"."assigned_role_id" = "ee_role"."id")
  WHERE "insights_earlyaccessfeature"."feature_flag_id" IN (1,
                                                           2,
                                                           3,
                                                           4,
                                                           5 /* ... */)
  '''
# ---
